src/test/ui/rfc-2093-infer-outlives/regions-outlives-nominal-type-region.stderr
error[E0491]: in type `&'a variant_struct_region::Foo<'b>`, reference has a longer lifetime than the data it references
  --> $DIR/regions-outlives-nominal-type-region.rs:17:9
   |
LL |         type Out = &'a Foo<'b>;
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime 'a as defined on the impl at 16:10
  --> $DIR/regions-outlives-nominal-type-region.rs:16:10
   |
LL |     impl<'a, 'b> Trait<'a, 'b> for usize {
   |          ^^
note: but the referenced data is only valid for the lifetime 'b as defined on the impl at 16:14
  --> $DIR/regions-outlives-nominal-type-region.rs:16:14
   |
LL |     impl<'a, 'b> Trait<'a, 'b> for usize {
   |              ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0491`.
